--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is just a  test for git init</h1>
 
     <h2>Feature One Heading</h2>
+    <img src="image.png" alt="">
 </body>
 </html>
